# strategie

./: CMakeLists.txt  commonActions.h  constants.h  context.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ressources.qrc  robotActions.h  startegies.h  strategie.pro  strategies.cpp  strategies.h  utility.h
ui/gameElements/: plants.cpp  plants.h
